load("@rules_cc//cc:cc_static_library.bzl", "cc_static_library")
load("@rules_cc//cc:defs.bzl", "cc_import", "cc_library", "cc_shared_library")
load("@rules_pkg//pkg:install.bzl", "pkg_install")
load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files")
load("//bazel/rules:dd_agent_expand_template.bzl", "dd_agent_expand_template")
load("//bazel/rules/dd_packaging:dd_cc_packaged.bzl", "dd_cc_packaged")
load("//bazel/rules/dd_packaging:dd_collect_dependencies.bzl", "dd_collect_dependencies")

VERSION = "0.1.0"

COMMON_CXXOPTS = [
    # This was ported from the equivalent original CMake `set(CMAKE_CXX_STANDARD 11)` et al.
    "-std=c++11",
]

cc_library(
    name = "rtloader",
    srcs = [
        "common/rtloader_mem.c",
        "include/rtloader.h",
        "rtloader/api.cpp",
        "rtloader/rtloader.cpp",
    ],
    hdrs = [":rtloader_headers"],
    copts = ["-O2"],
    cxxopts = COMMON_CXXOPTS,
    linkopts = [
        # Make up for the fact that we may be using gcc and not g++
        "-lstdc++",
    ] + select({
        "@platforms//os:windows": ["-static"],
        "//conditions:default": [],
    }),
    local_defines = select({
        "@platforms//os:linux": [
            "_GLIBCXX_USE_CXX11_ABI=0",
            # backtrace / execinfo.h is provided by glibc 2.1+ so we know it to be available
            "HAS_BACKTRACE_LIB",
        ],
        "@platforms//os:macos": [
            "_GLIBCXX_USE_CXX11_ABI=0",
            # backtrace / execinfo.h is provided by the macOS libc since Mac OS X 10.5
            # https://manp.gs/mac/3/backtrace#HISTORY
            "HAS_BACKTRACE_LIB",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [":rtloader_headers"],
)

filegroup(
    name = "rtloader_header_files",
    srcs = [
        "common/rtloader_mem.h",
        "include/datadog_agent_rtloader.h",
        "include/rtloader_types.h",
    ],
)

cc_library(
    name = "rtloader_headers",
    hdrs = [":rtloader_header_files"],
    includes = [
        ".",
        "common",
        "include",
    ],
    visibility = [":__subpackages__"],
)

cc_shared_library(
    name = "datadog-agent-rtloader",
    visibility = [":__subpackages__"],
    deps = [":rtloader"],
)

dd_cc_packaged(
    name = "rtloader_pkg",
    input = ":datadog-agent-rtloader",
    installed_files = [":rtloader_header_pkg_files"],
    version = VERSION,
    visibility = ["//visibility:public"],
)

cc_static_library(
    name = "rtloader_static",
    deps = [":rtloader"],
)

cc_import(
    name = "_rtloader_shared",
    shared_library = "//rtloader:datadog-agent-rtloader",
)

# Headers + dynamic link against libdatadog-agent-rtloader.so.
# Use in go_library cdeps instead of //rtloader:rtloader to avoid static linking.
cc_library(
    name = "rtloader_dynamic",
    visibility = ["//visibility:public"],
    deps = [
        ":_rtloader_shared",
        "//rtloader:rtloader_headers",
    ],
)

dd_agent_expand_template(
    name = "constants_gen",
    out = "constants.h",
    substitutions = {
        # TODO(agent-build): either get rid of the need for this substitution or
        # use a single source of truth for the version
        "@Python3_STDLIB@": "{install_dir}/embedded/lib/python3.13",
    },
    template = "three/constants.h.in",
)

cc_library(
    name = "three",
    srcs = [
        "common/builtins/_util.c",
        "common/builtins/_util.h",
        "common/builtins/aggregator.c",
        "common/builtins/aggregator.h",
        "common/builtins/containers.c",
        "common/builtins/containers.h",
        "common/builtins/datadog_agent.c",
        "common/builtins/datadog_agent.h",
        "common/builtins/kubeutil.c",
        "common/builtins/kubeutil.h",
        "common/builtins/tagger.c",
        "common/builtins/tagger.h",
        "common/builtins/util.c",
        "common/builtins/util.h",
        "common/cgo_free.c",
        "common/cgo_free.h",
        "common/log.c",
        "common/log.h",
        "common/stringutils.c",
        "common/stringutils.h",
        "constants.h",
        "include/rtloader.h",
        "three/three.cpp",
        "three/three.h",
        "three/three_mem.cpp",
    ],
    hdrs = ["common/cgo_free.h"],
    copts = ["-O2"] + select({
        "@platforms//os:windows": [],
        "//conditions:default": [
            "-Wno-deprecated-register",
        ],
    }),
    cxxopts = COMMON_CXXOPTS,
    includes = [
        ".",
        "common",
        "common/builtins",
        "include",
    ],
    linkopts = [
        # Make up for the fact that we may be using gcc and not g++
        "-lstdc++",
    ] + select({
        "@platforms//os:windows": ["-static"],
        "//conditions:default": [],
    }),
    local_defines = select({
        "@platforms//os:windows": [
            "_hypot=hypot",
            "DATADOG_AGENT_THREE",
        ],
        "//conditions:default": [
            "_GLIBCXX_USE_CXX11_ABI=0",
            "DATADOG_AGENT_THREE",
        ],
    }),
    visibility = ["//visibility:public"],
    deps = [":rtloader"] + select({
        "@platforms//os:windows": [
            "@cpython//:lib_win",
        ],
        "@platforms//os:linux": [
            "@cpython//:python_unix_shared",
        ],
        "@platforms//os:macos": [
            "@cpython//:python_unix_shared",
        ],
    }),
)

cc_shared_library(
    name = "datadog-agent-three",
    dynamic_deps = select({
        # Note: on Windows we link against the rtloader lib statically, and we don't
        # need to add a reference to python explicitly because there's no static python lib
        # visible to this rule in its dependency chain.
        "@platforms//os:windows": [],
        "@platforms//os:linux": [
            ":rtloader_pkg",
            "@cpython//:python_unix_shared",
        ],
        "@platforms//os:macos": [
            ":rtloader_pkg",
            "@cpython//:python_unix_shared",
        ],
    }),
    shared_lib_name = select({
        "@platforms//os:windows": "libdatadog-agent-three.dll",
        "@platforms//os:linux": "libdatadog-agent-three.so",
        "@platforms//os:macos": "libdatadog-agent-three.dylib",
    }),
    user_link_flags = select({
        "@platforms//os:windows": [],
        "@platforms//os:linux": [
            # Ensure symbols are resolved
            "-Wl,--no-undefined",
        ],
        "@platforms//os:macos": [
            # Ensure symbols are resolved
            "-Wl,-undefined,error",
        ],
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":three",
    ],
)

dd_cc_packaged(
    name = "three_pkg",
    input = ":datadog-agent-three",
    visibility = ["//visibility:public"],
)

pkg_files(
    name = "rtloader_header_pkg_files",
    srcs = [":rtloader_header_files"],
    prefix = "include",
)

pkg_files(
    name = "rtloader_three_pkg_files",
    srcs = [":datadog-agent-three"],
    prefix = select({
        "@platforms//os:windows": "bin/agent",
        "//conditions:default": "lib",
    }),
)

pkg_filegroup(
    name = "all_files",
    srcs = select({
        "@platforms//os:windows": [":rtloader_three_pkg_files"],
        "//conditions:default": [
            ":rtloader_header_pkg_files",
            ":rtloader_pkg_packaged",
            ":three_pkg_packaged",
        ],
    }),
    prefix = select({
        "@platforms//os:windows": "",
        "//conditions:default": "embedded",
    }),
    visibility = ["//packages:__subpackages__"],
)

pkg_install(
    name = "install",
    srcs = [":all_files"],
)

# Temporary install target meant as a way to integrate with non-bazelified Agent build
pkg_install(
    name = "install_static",
    srcs = [":static_lib_files"],
)

pkg_files(
    name = "static_lib_files",
    srcs = [":rtloader_static"],
    renames = {
        ":rtloader_static": "libdatadog-agent-rtloader.a",
    },
)

# Dev-only: installs rtloader + the full Python environment (CPython + deps) in one shot.
# Used by the invoke tasks instead of separate per-dependency bazel run calls.

# OpenSSL shared libs only — exclude headers to avoid conflict with CPython's include/.
pkg_filegroup(
    name = "openssl_libs_embedded",
    srcs = [
        "@openssl//:libcrypto_with_symlink",
        "@openssl//:libssl_with_symlink",
    ],
    prefix = "embedded",
)

dd_collect_dependencies(
    name = "_python_env_transitive",
    srcs = [":three_pkg"],
    visibility = ["//visibility:private"],
)

pkg_filegroup(
    name = "python_env_transitive",
    srcs = [":_python_env_transitive"],
    prefix = "embedded",
)

pkg_filegroup(
    name = "python_env_files",
    srcs = [
        ":openssl_libs_embedded",
        ":python_env_transitive",
        "@cpython//:all_files",
    ],
)

pkg_install(
    name = "install_python_env",
    srcs = [":python_env_files"],
)
