load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")

package(default_visibility = ["//visibility:private"])

py_library(
    name = "licenses",
    srcs = ["licenses.py"],
    visibility = ["//compliance:__subpackages__"],
    deps = [
        "@py_dev_requirements//invoke",
        "@py_dev_requirements//pyyaml",
    ],
)

exports_files(["core_checks.py"])

py_library(
    name = "renovate_lib",
    srcs = ["renovate.py"],
    imports = [".."],
    deps = [
        "@py_dev_requirements//invoke",
        "@py_dev_requirements//starlark_pyo3",
    ],
)

# Used by //pkg/config/schema:merged_core_schema to inline the per-section
# sub-files referenced by core_schema.yaml's $refs.
py_binary(
    name = "merge_schema",
    srcs = ["schema/merge_schema.py"],
    main = "schema/merge_schema.py",
    visibility = ["//pkg/config/schema:__pkg__"],
    deps = ["@py_dev_requirements//pyyaml"],
)

# No `data = [...]` for renovate.json / deps/ / .renovate-untracked.json on
# purpose: the script resolves them via $BUILD_WORKSPACE_DIRECTORY (set by
# `bazel run`) so it reads the live workspace, not the bazel sandbox. Adding
# them as data deps would silently shadow the real files.
py_binary(
    name = "check_renovate_bazel_coverage",
    srcs = ["renovate.py"],
    main = "renovate.py",
    deps = [":renovate_lib"],
)

py_binary(
    name = "refresh_renovate_archive_hashes",
    srcs = ["renovate_refresh.py"],
    main = "renovate_refresh.py",
    deps = [":renovate_lib"],
)

py_test(
    name = "renovate_tests",
    srcs = ["unit_tests/renovate_tests.py"],
    imports = [".."],
    deps = [
        ":renovate_lib",
    ],
)
