load("@buildifier_prebuilt//:rules.bzl", "buildifier", "buildifier_test")

exclude_patterns = [
    "./.bazelbsp/**",
    "./.cache/**",
]

buildifier(
    name = "buildifier",
    exclude_patterns = exclude_patterns,
    lint_mode = "fix",
    mode = "fix",
)

# PROS of `buildifier_test` over `buildifier`:
# - renders diffs without having to provide `tkdiff`
# - also works as a `test` action: `bazel test //bazel/buildifier:test` as well as `bazel test //...`
# CONS:
# - requires additional arguments: `no_sandbox` and `workspace`
buildifier_test(
    name = "test",
    exclude_patterns = exclude_patterns,
    lint_mode = "warn",
    lint_warnings = ["-module-docstring"],
    mode = "diff",
    no_sandbox = True,
    workspace = "//:BUILD.bazel",
)
