# Incorporate externally built rtloader (expected to be dropped inside this same folder)
cc_import(
    name = "rtloader",
    hdrs = [
        "rtloader/include/datadog_agent_rtloader.h",
        "rtloader/include/rtloader.h",
        "rtloader/include/rtloader_types.h",
        "rtloader/common/rtloader_mem.h",
    ],
    includes = [
        "bazel/prebuilt_inputs/rtloader/include",
        "bazel/prebuilt_inputs/rtloader/common",
    ],
    shared_library = "rtloader/libdatadog-agent-rtloader.so",
    visibility = ["//visibility:public"],
)


