load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load(":template_expand_test.bzl", "template_test_suite")

sh_binary(
    name = "replace_prefix",
    srcs = ["replace_prefix.sh"],
    args = select({
        "@platforms//os:linux": [
            "--patchelf",
            "$(location @patchelf)",
        ],
        "//conditions:default": [],
    }),
    data = select({
        "@platforms//os:linux": ["@patchelf"],
        "//conditions:default": [],
    }),
    tags = ["manual"],
)

template_test_suite(name = "_dd_agent_expand_template_tests")
