load("@rules_python//python:py_test.bzl", "py_test")

package(default_visibility = ["//visibility:public"])

py_test(
    name = "does_python_work",
    srcs = ["does_python_work.py"],
    data = [
        "//:python_version",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "@py_dev_requirements//invoke",
        "@rules_python//python/runfiles",
    ],
)
