load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_python//python:py_binary.bzl", "py_binary")

py_binary(
    name = "go_mod_tidy_all",
    srcs = ["go_mod_tidy_all.py"],
    args = ["$(rlocationpath @rules_go//go)"],
    data = ["@rules_go//go"],
    visibility = ["//:__pkg__"],
    deps = ["@rules_python//python/runfiles"],
)

py_binary(
    name = "generate_module_bazel",
    srcs = ["generate_module_bazel.py"],
    visibility = ["//deps:__subpackages__"],
)

bzl_library(
    name = "generate_module_bazel_bzl",
    srcs = ["generate_module_bazel.bzl"],
    visibility = ["//deps:__subpackages__"],
)
