load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_python//python:py_binary.bzl", "py_binary")

py_binary(
    name = "go_mod_tidy_all",
    srcs = ["go_mod_tidy_all.py"],
    args = ["$(rlocationpath @rules_go//go)"],
    data = ["@rules_go//go"],
    visibility = ["//:__pkg__"],
    deps = ["@rules_python//python/runfiles"],
)

py_binary(
    name = "generate_module_bazel",
    srcs = ["generate_module_bazel.py"],
    visibility = ["//deps:__subpackages__"],
)

# @llvm_toolchain_llvm//:install-name-tool is only defined for macos and linux.
# This acts as a replacement to avoid analysis-time failures on windows.
write_file(
    name = "_empty_install_name_tool",
    out = "empty_install_name_tool",
    is_executable = True,
)

alias(
    name = "install_name_tool",
    actual = select({
        "@platforms//os:linux": "@llvm_toolchain_llvm//:install-name-tool",
        "@platforms//os:macos": "@llvm_toolchain_llvm//:install-name-tool",
        "//conditions:default": ":_empty_install_name_tool",
    }),
    visibility = ["//visibility:public"],
)
